--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.32"
-    ext.lifecycle_version = "2.3.1"
+    ext.sdk_version = 33
+    ext.kotlin_version = "1.7.10"
+    ext.lifecycle_version = "2.5.1"
+    ext.core_version = "1.7.0"
+    ext.coroutines_version = "1.6.4"
+    ext.lifecycle_version = "2.5.1"
+    ext.appcompat_version = "1.5.1"
+    ext.activity_version = "1.5.1"
 
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.2"
+        classpath 'com.android.tools.build:gradle:7.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
